--- a/client/Front-end/src/styles/NewRecipe.css
+++ b/client/Front-end/src/styles/NewRecipe.css
@@ -15,6 +15,9 @@
 .recipe-image {
   border-radius: 8px;
   margin-bottom: 20px;
+  object-fit: cover;
+  width: 100%;
+  max-height: 275px;
 }
 
 .total-time {
@@ -69,8 +72,11 @@
   justify-content: space-around;
   align-items: center;
 }
-.image-wrapper {
+.image-div {
   width: 50%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .save-button {
@@ -152,5 +158,26 @@
 .details-div {
   display: flex;
   flex-direction: column;
-  align-items: flex-end;
+  align-items: flex-start;
+}
+
+.recipe-image-new-recipe {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.image-wrapper {
+  width: 350px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 10px 0 15px 0;
+}
+
+.URL-new-recipe {
+  width: 90%;
+}
+.URL-input-new-recipe {
+  width: 70%;
 }
