--- a/client/Front-end/src/styles/RecipeList.css
+++ b/client/Front-end/src/styles/RecipeList.css
@@ -54,7 +54,7 @@
 
 .recipe-image-wrapper img {
   width: 100%;
-  height: 100%;
+  max-height: 250px;
   border-radius: 10px;
   object-fit: cover;
 }
